sandbox/output
Hiker.java:5: error: cannot find symbol
        if(args.length == 1){
               ^
  symbol:   variable length
  location: variable args of type String
1 error
